@@ -97,7 +97,7 @@ protected:
             unsigned attackMode, unsigned attackSubmode,
             unsigned distributionMode, std::string name, unsigned hashType,
             unsigned generateRandomRules = 0, unsigned hwTempAbort = 90,
-            bool optimized = true, std::string ruleLeft = "",
+            bool optimized = true, std::string deviceTypes = "", std::string ruleLeft = "",
             std::string ruleRight = "", std::string charset1 = "",
             std::string charset2 = "", std::string charset3 = "",
             std::string charset4 = "");
