@@ -62,7 +62,7 @@ bool CAttackHybridDictMask::makeWorkunit()
 	}
 
 	f << generateBasicConfig(m_job->getAttackMode(), m_job->getAttackSubmode(), m_job->getDistributionMode(),
-		m_job->getName(), m_job->getHashType(), 0, m_job->getHWTempAbort(), m_job->getOptimizedFlag(), m_job->getRuleLeft());
+		m_job->getName(), m_job->getHashType(), 0, m_job->getHWTempAbort(), m_job->getOptimizedFlag(), m_job->getDeviceTypes(), m_job->getRuleLeft());
 
 	auto dictVec = m_job->getDictionaries();
 	bool hexDicts = std::all_of(dictVec.begin(), dictVec.end(), [](auto dict){ return dict->isHexDict(); });
