@@ -122,7 +122,7 @@ bool CAttackPcfg::makeWorkunit()
     f << generateBasicConfig(m_job->getAttackMode(), m_job->getAttackSubmode(), m_job->getDistributionMode(),
                              m_job->getName(), m_job->getHashType(), 0,
                              m_job->getHWTempAbort(),
-                             m_job->getOptimizedFlag());
+                             m_job->getOptimizedFlag(), m_job->getDeviceTypes());
 
     /** Output hc_keyspace */
     auto limitLine = makeLimitingConfigLine("hc_keyspace", "BigUInt", std::to_string(newKeyspace));
