@@ -167,6 +167,7 @@ def create_job(data):
         max_elem_in_chain=job['attack_settings'].get('max_elem_in_chain', 0),
         generate_random_rules=job['attack_settings'].get('generate_random_rules', 0),
         optimized=job['attack_settings'].get('optimized', 1),
+        device_types = sum(1 << type for type in job.get('device_types', [0])),
         dict_deployment_mode=job['attack_settings'].get('dict_deployment_mode', 0),
         deleted=False
         )
